Logo and about text align fixed

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -68,11 +68,13 @@
     margin: 10% 0 0 0;
     width: 100%;
     line-height: 2.5rem;
+    text-align: center;
   }
 
   .tile-link {
     margin: 6% 0;
     width: 100%;
+    text-align: center;
   }
 }
 
@@ -90,7 +92,7 @@
   }
 
   .team-tile:nth-child(3) {
-    .text-wrapper, .tile-link { text-align: right; }
+    .text-wrapper, .tile-link { text-align: center; }
   }
 
   .team-tile {
